[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Fonts/UI-Font8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/UI/Tooltip.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Fonts/TitleUI-Font8.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Tooltip" type="Control"]
anchor_left = 0.25
anchor_top = 0.794
anchor_right = 0.75
anchor_bottom = 0.989
margin_top = 0.0800018
margin_bottom = -0.0200043
script = ExtResource( 2 )

[node name="Shadow" type="Panel" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 162.0
margin_bottom = 37.0
custom_styles/panel = SubResource( 1 )

[node name="Panel3" type="Panel" parent="Shadow"]
margin_left = 168.0
margin_top = 2.0
margin_right = 200.0
margin_bottom = 34.0
custom_styles/panel = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0

[node name="Margin" type="MarginContainer" parent="Panel"]
anchor_left = 0.031
anchor_top = 0.135
anchor_right = 0.969
anchor_bottom = 0.946
margin_left = -0.96
margin_top = -0.86
margin_right = 0.960007
margin_bottom = -0.0559998
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
margin_right = 152.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_right = 152.0
margin_bottom = 11.0
size_flags_vertical = 3

[node name="Name" type="Label" parent="Panel/Margin/VBox/HBox"]
margin_right = 74.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color_shadow = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Gold"

[node name="Type" type="Label" parent="Panel/Margin/VBox/HBox"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color_shadow = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Currency"
align = 2

[node name="Spacer" type="MarginContainer" parent="Panel/Margin/VBox"]
margin_top = 15.0
margin_right = 152.0
margin_bottom = 15.0

[node name="HBox2" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_top = 19.0
margin_right = 152.0
margin_bottom = 30.0
size_flags_vertical = 3

[node name="Text" type="RichTextLabel" parent="Panel/Margin/VBox/HBox2"]
margin_right = 152.0
margin_bottom = 11.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.533333, 0.533333, 0.533333, 1 )
custom_colors/font_color_shadow = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_fonts/normal_font = ExtResource( 1 )
text = "Use to purchase things"
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 168.0
margin_top = 2.0
margin_right = 200.0
margin_bottom = 34.0

[node name="Panel2" type="Panel" parent="Panel/VBoxContainer"]
margin_right = 32.0
margin_bottom = 14.0
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Button2" type="Button" parent="Panel/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.847059, 0.521569, 1 )
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "TAKE"
flat = true

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 32.0
margin_bottom = 32.0
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="Panel/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.847059, 0.521569, 1 )
custom_fonts/font = ExtResource( 3 )
text = "DROP"
flat = true

[connection signal="pressed" from="Panel/VBoxContainer/Panel2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/Button" to="." method="_on_Button_pressed"]
